--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <script type="text/javascript" src="js/swfobject-2.2.min.js"></script>
-<script type="text/javascript" src="http://www.java.com/js/dtjava.js"></script>
+<script type="text/javascript" src="https://www.java.com/js/dtjava.js"></script>
 <script type="text/javascript" src="js/evercookie.js"></script>
 <title>evercookie - virtually irrevocable persistent cookies</title>
 </head>
