--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     
     // set a cookie "id" to "12345"
     // usage: ec.set(key, value)
-    //ec.set("id", "newcookieval");    
+    ec.set("id", "tushar cookie");    
     // retrieve a cookie called "id" (simply)
     ec.get("id", function(value) { alert("Cookie value is " + value) }); 
  
