--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
     </embed>
 </object>
 
- Testing Evercookie
+ Testing Evercookie : New cookie value
     
 <script>
     var ec = new evercookie(); 
     
     // set a cookie "id" to "12345"
     // usage: ec.set(key, value)
-    ec.set("id", "tushar cookie");    
+    ec.set("id", "New cookie value");    
     // retrieve a cookie called "id" (simply)
     ec.get("id", function(value) { alert("Cookie value is " + value) }); 
  
