--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     
     // set a cookie "id" to "12345"
     // usage: ec.set(key, value)
-    ec.set("id", "New cookie value");    
+    //ec.set("id", "New cookie value");    
     // retrieve a cookie called "id" (simply)
     ec.get("id", function(value) { alert("Cookie value is " + value) }); 
  
