--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </embed>
 </object>
 
- Testing Evercookie : New cookie value
+ Testing Evercookie : New cookie value erwrwer
     
 <script>
     var ec = new evercookie(); 
