--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     // usage: ec.set(key, value)
     //ec.set("id", "New cookie value");    
     // retrieve a cookie called "id" (simply)
-    ec.get("id", function(value) { alert("Cookie value is " + value) }); 
+    ec.get("id", function(value) { console.log("Cookie value is " + value) }); 
  
     // or use a more advanced callback function for getting our cookie
     // the cookie value is the first param
