--- a/flash-cookies/index.html
+++ b/flash-cookies/index.html
@@ -11,7 +11,7 @@
 	  namespace: "my_cool_app",
 	  swf_url: "https://tusharncuelogic.github.io/flash-cookies/storage.swf",
 	  onready: function() {
-	    mySwfStore.set('mykey', 'myvaluenew');
+	   // mySwfStore.set('mykey', 'myvaluenew');
 	    console.log('key is now set to ' + mySwfStore.get('mykey'));
 	  },
 	  onerror: function(err) {
