--- a/flash-cookies/index.html
+++ b/flash-cookies/index.html
@@ -12,7 +12,7 @@
 	  swf_url: "https://tusharncuelogic.github.io/assets/evercookie.swf",
 	  onready: function() {
 	   // mySwfStore.set('mykey', 'myvaluenew');
-	    console.log('key is now set to ' + mySwfStore.get('mykey'));
+	    console.log('key is now set to ' + mySwfStore.get('id'));
 	  },
 	  onerror: function(err) {
 	    console.error(err.message);
