--- a/flash-cookies/index.html
+++ b/flash-cookies/index.html
@@ -9,7 +9,7 @@
 	
 	var mySwfStore = new SwfStore({
 	  namespace: "my_cool_app",
-	  swf_url: "https://tusharncuelogic.github.io/storage.swf",
+	  swf_url: "https://tusharncuelogic.github.io/flash-cookies/storage.swf",
 	  onready: function() {
 	   // mySwfStore.set('mykey', 'myvaluenew');
 	    console.log('key is now set to ' + mySwfStore.get('id'));
