--- a/ScottHamper/index.html
+++ b/ScottHamper/index.html
@@ -8,7 +8,9 @@
 
 <script type="text/javascript">
 	Cookies.set('key','Tushar') ;
-	Cookies.get('key');
+	var test = Cookies.get('key');
+	console.log("Cookies value is ");
+	console.log(test);
 </script>
 </body>
 </html>
