--- a/ScottHamper/index.html
+++ b/ScottHamper/index.html
@@ -7,8 +7,8 @@
 <body>
 
 <script type="text/javascript">
-	/*Cookies.set('key','Tushar') ;
-	var test = Cookies.get('key');*/
+	/*Cookies.set('key','Tushar') ;	*/
+	var test = Cookies.get('key');
 	console.log("Cookies value is ");
 	console.log(test);
 </script>
