--- a/ScottHamper/index.html
+++ b/ScottHamper/index.html
@@ -8,9 +8,8 @@
 
 <script type="text/javascript">
 	/*Cookies.set('key','Tushar') ;	*/
-	var test = Cookies.get('key');
 	console.log("Cookies value is ");
-	console.log(test);
+	console.log(Cookies.get('key'));
 </script>
 </body>
 </html>
