--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
 </head>
 <body>
 
-<object width="100" height="100">
+<!-- <object width="100" height="100">
     <param name="movie" value="assets/evercookie.swf">
     <embed src="assets/evercookie.swf" width="100" height="100">
     </embed>
-</object>
+</object> -->
 
  Testing Evercookie : New cookie value erwrwer
     
