--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 <script type="text/javascript">
     mySharedObject=SharedObject.getLocal("userData"); 
-    mySharedObject.data. =  "Tushar Nikam";
+    mySharedObject.data = "Nikam";
     mySharedObject.flush();
     console.log("User name is " +mySharedObject.data.username);
 </script>
