--- a/index.html
+++ b/index.html
@@ -14,21 +14,20 @@
 
  Testing Evercookie : New cookie value erwrwer
     
-<!-- <script>
-    var ec = new evercookie();    
-    ec.set("id", "New cookie value");    
+<script>
+    var ec = new evercookie();
+    ec.set("id", "Tushar");    
     ec.get("id", function(value) { console.log("Cookie value is " + value) });
-</script>  -->
-
+</script> 
 
 <!-- Read the local storage objects -->
-
+<!-- 
 <script type="text/javascript">
     mySharedObject=SharedObject.getLocal("userData"); 
     mySharedObject.data = "Nikam";
     mySharedObject.flush();
     console.log("User name is " +mySharedObject.data.username);
-</script>
+</script> -->
 
 
 </body>
