--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     
 <script>
     var ec = new evercookie();
-    ec.set("id", "Tushar");    
+    //ec.set("id", "Tushar");    
     ec.get("id", function(value) { console.log("Cookie value is " + value) });
 </script> 
 
